<resources>
    <string name="app_name">Cafe Order</string>
    <string name="logo_description">Логотип кафе</string>
    <string name="welcome">Welcome!</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="hint_name">login</string>
    <string name="hint_password">password</string>
    <string name="button_create_order">Make an order</string>
    <string name="warning_fill_fields">"Все поля должны быть заполнены"</string>
    <string name="hello_user">Привет, %s! Что будете заказывать?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additions">Что добавить в ваш %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лимон</string>
    <string name="choose_drink">Выберите вид напитка?</string>
    <string name="button_send_description">Кнопка отправить заказ</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="neen_additions">\Необходимые добавки: \"</string>
    <string name="button_confirm">Confirm</string>
    <string name="make_an_order">Make an order</string>

    <string-array name="options_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Чёрный</item>
        <item>Зелёный</item>
        <item>Красный</item>
    </string-array>
</resources>
