<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/surfcoffee" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/realwhite"
        android:textSize="36sp"
        android:gravity="center"
        android:fontFamily="@font/vegan"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/realwhite"
        android:textColorHint="@color/realwhite"
        android:textStyle="bold"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/realwhite"
        android:textColorHint="@color/realwhite"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/buttonCreateObject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/realwhite"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:fontFamily="@font/vegan"
        android:onClick="onClickCreateOrder"
        android:text="@string/button_create_order" />
</LinearLayout>